--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,85 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.operands, .operators{
   display: flex;
-  flex-direction: column;
+  overflow-x: scroll;
+}
+
+.operand, .operator, .comparator, .rhs{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100px;
+  width: 100px;
+  padding: 10px;
+  margin: 10px;
+  font-weight: bolder;
+  background-color: yellowgreen;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  cursor: move;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.operator, .comparator, .rhs{
+  height: 50px;
+  background-color: rosybrown;
+}
+
+.comparator, .rhs{
+  cursor: pointer;
+}
+
+.canvas{
+  display: flex;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  border: dashed 5px grey;
+  height: 150px;
+  align-items: center;
+}
+
+.submit{
   color: white;
+  font-weight: bold;
+  border: none;
+  background-color:cornflowerblue;
+  padding: 10px;
+  width: 100%;
+  border-radius: 10px;
+  margin-top: 20px;
+  cursor:pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.remove{
+  display: flex;
+  color: white;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  height: 15px;
+  width: 15px;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remove:hover{
+  color: bisque;
+}
+
+.canvas > .operand, .canvas > .operator, .canvas > .comparator{
+  position: relative;
+  cursor: pointer;
+}
+
+.canvas > .rhs{
+  position: relative;
+  cursor: pointer;
+  height: 100px;
+  background-color:darksalmon;
+}
+
+.space{
+  width: 50px;
 }
